--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0px;
     padding: 0px;
@@ -10,6 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    font-family: "Poppins", serif;
 }
 
 .container {
@@ -26,7 +28,7 @@ body {
 .card {
     width: 60vw;
     display: flex;
-    align-items: baseline;
+    align-items:flex-start;
     background: white;
     padding: 1rem;
     border-radius: 4px;
@@ -68,6 +70,8 @@ body {
     color: #212121;
     background: transparent;
     border-radius: 4px;
+    font-size: 16px;
+
 }
 
 .input__field:focus+.input__label,
@@ -83,6 +87,7 @@ body {
     font-weight: bold;
     cursor: pointer;
     width: 70%;
+    font-size: 16px;
 }
 
 .search-btn:hover {
@@ -93,7 +98,6 @@ body {
 /* the profile result part of container */
 .profile-result {
     width: 60vw;
-    height: 300px;
     display: flex;
     border-radius: 4px;
     border: 2px solid #212121;
@@ -175,7 +179,7 @@ body {
     flex-direction: column;
     border-left: 2px solid #212121;
     padding: 15px;
-    gap: 15px;
+    gap: 5px;
 }
 
 .name {
